# framework3

./: COMMIT_PLAN.md  README.md  STATUS.md  docker-compose.yaml
nginx/: nginx.conf
pascal_legacy/: Dockerfile  convert_to_xlsx.py  generate_data.pas  generate_data.py
php_web/: Dockerfile  composer.json  index.php
php_web/app/: Router.php
php_web/app/Http/Controllers/: AstronomyController.php  DashboardController.php  IssController.php  JwstController.php  (+1 more)
php_web/app/Services/: ApiClient.php
php_web/public/: index.php
php_web/public/css/: style.css
php_web/resources/views/: dashboard.php
rust_iss/: Cargo.toml  Dockerfile
rust_iss/migrations/: 001_create_iss_data.sql  002_create_osdr_data.sql  003_create_jwst_data.sql  004_create_astronomy_data.sql
rust_iss/src/: config.rs  main.rs
rust_iss/src/clients/: astronomy_client.rs  iss_client.rs  jwst_client.rs  mod.rs  osdr_client.rs
rust_iss/src/domain/: astronomy.rs  cache.rs  iss.rs  jwst.rs  mod.rs  osdr.rs
rust_iss/src/domain/validation/: astronomy_validator.rs  iss_validator.rs  jwst_validator.rs  mod.rs  osdr_validator.rs
rust_iss/src/handlers/: astronomy_handler.rs  cache_handler.rs  error.rs  iss_handler.rs  jwst_handler.rs  mod.rs  osdr_handler.rs
rust_iss/src/middleware/: rate_limit.rs
rust_iss/src/repo/: astronomy_repo.rs  cache_repo.rs  iss_repo.rs  jwst_repo.rs  mod.rs  osdr_repo.rs
rust_iss/src/routes/: astronomy.rs  cache.rs  iss.rs  jwst.rs  mod.rs  osdr.rs
rust_iss/src/services/: astronomy_service.rs  iss_service.rs  jwst_service.rs  mod.rs  osdr_service.rs
(+2 files in other folders)
