[package]
name = "rust_iss"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "limit", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
validator = { version = "0.18", features = ["derive"] }
dotenv = "0.15"

